--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Factor Math</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
+        ::selection {
+            background: #E9E7F4;
+            color: #614099;
+            }
         @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;500;600;700&display=swap');
         * {
             margin: 0;
@@ -366,3 +370,4 @@
 </body>
 
 </html>
+
