--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         <main class="main-content">
             <div class="content-section">
                 <h2>关于我</h2>
-                <p>你好，我是 Jack！一名普通的 DSE 数学老师。很高兴你能访问这个网站，欢迎你。希望 Factormath 能够称为你DSE数学学习路上的一个好用的工具。</p>
+                <p>你好，我是 Jack！一名普通的 DSE 数学老师。很高兴你能访问这个网站，欢迎你。希望 Factormath 能够成为你 DSE 数学学习路上的一个好工具。</p>
             </div>
             
             <div class="content-section">
@@ -370,4 +370,5 @@
 </body>
 
 </html>
+
 
