--- a/resources.html
+++ b/resources.html
@@ -259,18 +259,20 @@
         
         <main class="main-content">
             <div class="content-section">
-                <h2>关于我</h2>
-                <p>你好，我是 Jack！一名普通的 DSE 数学老师。很高兴你能访问这个网站，欢迎你。希望 Factormath 能够称为你DSE数学学习路上的一个好用的工具。</p>
+                <h2>写在前面</h2>
+                <p>这里会分享一些免费的资源，但是因为平时比较忙，加上我很懒，所以更新会比较慢。主要还是以一些笔记为主，如果阅读过程中有什么地方写错了，请及时联系我！</p>
             </div>
             
             <div class="content-section">
-                <h2>DSE数学课程</h2>
-                <p>学习需要方法和技巧，更需要耐心以及努力。</p>
+                <h2>M1</h2>
+                <p>M1 虽然简单，但是这门课还是有很多需要细节的。随着教学次数的增多，慢慢也会有一些小的感悟，我都会及时记录下来。</p>
                 <div class="grid">
-                    <div class="card">
-                        <h3><i class="fas fa-calculator"></i> 必修数学</h3>
-                        <p>中一到中六全年级必修数学内容</p>
-                    </div>
+                    <a href="files/M1/M1_formula_2509.pdf" download="M1_formula_2509.pdf" class="card-link">
+                        <div class="card">
+                            <h3><i class="fas fa-clock"></i> M1 Formula</h3>
+                            <p>基础的公式外，也有一些额外的有用的公式</p>
+                        </div>
+                    </a>
                     <div class="card">
                         <h3><i class="fas fa-chart-line"></i> M1/M2 选修</h3>
                         <p>延伸部分单元一（微积分与统计）和单元二（代数与微积分）专项辅导</p>
